# dashboard-finance

./: .gitignore  MODELS_DOCUMENTATION.md  Makefile  README.md  alembic.ini  celery_app.py  docker-compose.yml  main.py  pyproject.toml  reset_alembic.py  seed_database.py
alembic/: env.py
app/: __init__.py
app/api/: __init__.py
app/api/v1/: __init__.py  api.py  simple_test.py  test_metrics.py
app/api/v1/auth/: __init__.py
app/api/v1/stocks/: __init__.py
app/api/v1/users/: __init__.py
app/api/v1/websocket/: __init__.py
app/core/: __init__.py  config.py  database.py  logging.py  metrics.py
app/models/: __init__.py  base.py  database.py  scraping_log.py  stock.py  stock_price.py  user.py  user_portfolio.py  watchlist.py
app/repositories/: __init__.py  base.py  portfolio_repository.py  stock_repository.py  user_repository.py  watchlist_repository.py
app/seeders/: __init__.py  main_seeder.py
app/tasks/: __init__.py
app/tasks/maintenance/: __init__.py  cleanup.py
app/tasks/scraping/: __init__.py  stock_scraping.py
docker/development/: Dockerfile
monitoring/prometheus/: prometheus.yml
requirements/: base.txt  development.txt  production.txt  test.txt
tests/: conftest.py
